--- a/manuscript/Chapter8.Rmd
+++ b/manuscript/Chapter8.Rmd
@@ -80,17 +80,13 @@ Source: [USDA ERS Oil Crops Yearbook](http://www.ers.usda.gov/data-products/oil-
 
 As we mentioned in chapter 7, keeping track of how much soybeans have been used to date in each category is a useful exercise to determine a reasonable forecast for different use categories of soybeans. As was true for corn, information about the pace of use in each category must be obtained from different sources within the USDA. 
 
-## Crush
+Soybeans exports can be followed during the marketing year by following the [GIPSA]() and [FAS Export Reporting System]() as was identified for corn exports in Chapter 7. Also, as idenfied in Chapter 7 is is useful to tracking [Cattle on Feed](http://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1020), [Hogs and Pigs](http://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1086), and the [Poultry Slaughter](https://usda.mannlib.cornell.edu/MannUsda/viewDocumentInfo.do?documentID=1131), specifically because livestock numbers contribute to demand for soybean meal, which in turn contributes to crush demand. 
 
 
 
-## Exports 
 
- 
 
-## Feed and Residual
 
-   
 
 # Readings 
 
