--- a/manuscript/Chapter3.Rmd
+++ b/manuscript/Chapter3.Rmd
@@ -135,7 +135,7 @@ Since the USDA makes regular reports on the balance sheet for commodities (the W
 library(Kmisc)
 library(knitr)
 aug15wasdec <- read.csv('aug15wasdec.csv')
-kable(aug15wasdec, align = 'l')
+kable(aug15wasdec, align = 'l', col.names = c("Corn", "Marketing Year 2013/2014", "Marketing Year 2014/2015 Est.", "Marketing Year 2015/2016 July Projection", "Marketing Year 2015/2016 August Projection"))
 
 ```
 
@@ -156,7 +156,7 @@ The balance sheet for corn follows the same generic patter, but we can be a bit 
 library(Kmisc)
 library(knitr)
 aug15wasdes <- read.csv('aug15wasdes.csv')
-kable(aug15wasdes, align = 'l')
+kable(aug15wasdes, align = 'l', col.names = c("Soybeans", "Marketing Year 2013/2014", "Marketing Year 2014/2015 Est.", "Marketing Year 2015/2016 July Projection", "Marketing Year 2015/2016 August Projection"))
 
 ```
 
