--- a/EthanolMarketsand.Rmd
+++ b/EthanolMarketsand.Rmd
@@ -15,16 +15,18 @@ bibliography: PriceAnalysis.bib
 
 Ethanol production and consumption begin to increase rapidly around 2005, which is when the Energy Policy Act of 2005 and later the Energy Security and Independence Act of 2007 created the Renewable Fuels Standard (RFS). The RFS mandated quantities of ethanol that blenders of gasoline are required to blend into the retail gasoline supply. These annual mandates are revised every year, but they were designed to steadily increase year after year until 2015 when the mandate reached 15 billion gallons per year. This figure came about because gasoline consumption in the United States was forecast to reach 150 billion gallons per year by 2015. So the RFS mandates were designed to reach the point where the entire retail gasoline supply would include 10% ethanol. 
 
-The EPA released [final rules](http://www2.epa.gov/renewable-fuel-standard-program/final-renewable-fuel-standards-2014-2015-and-2016-and-biomass-base-0) regarding RFS for volume requirements of biofuels for 2014, 2015, and 2016 on November 30, 2015. 
+The EPA released [proposed rules](https://www.epa.gov/renewable-fuel-standard-program/proposed-renewable-fuel-standards-2017-and-biomass-based-diesel) regarding RFS for volume requirements of biofuels for 2014, 2015, 2016, and 2017 on May 31, 2016. 
 
 
 
 |                                         | 	2014 |	2015	|  2016  |  2017    | % Reduction in Greenhouse Gas Emissions |
 |:----------------------------------------|:------:|:------:|:------:|:--------:| :--------:|
-| Cellulosic biofuel (million gallons)   	|  33    |  	123 |  	230	 |   n/a    | > 60%     |
+| Cellulosic biofuel (million gallons)   	|  33    |  	123 |  	230	 |   312    | > 60%     |
 | Biomass-based diesel (billion gallons)  | 1.63   | 	1.73  | 	1.90 |	2.00    | > 50%     |
-| Advanced biofuel (billion gallons)      | 	2.67 | 2.88	  |  3.61  | n/a      | > 50%     |
-| Total Renewable fuel (billion gallons)      	| 16.28  |	16.93 |	18.11  | 	n/a  | > 20%  |
+| Advanced biofuel (billion gallons)      | 	2.67 | 2.88	  |  3.61  |  4.0     | > 50%     |
+| Total Renewable fuel (billion gallons)      	| 16.28  |	16.93 |	18.11  | 	18.8  | > 20%  |
+
+: Table 1: Renewable Fuel Mandated Volumes for 2014, 2015, 2016, and 2017 
 
 : Table 1: Renewable Fuel Mandated Volumes for 2014, 2015, 2016, and 2017 
 
@@ -83,7 +85,7 @@ DDG prices tend to follow the trend of corn prices, although not perfectly becau
 
 It is also informative to look at the price ratio of DDG and corn prices. This is displayed in figure 4. 
 
-![Figure 4: Ratio of DDG and Corn Prices, MonthlyAug 2000 - Oct 2015](Excel-files/EthanolMarketsand-Ethanol_files/image002.png)
+![Figure 4: Ratio of DDG and Corn Prices, MonthlyAug 2000 - Oct 2015](Excel-files/EthanolMarketsand-Ethanol_files/image003.png)
 
 The price ratio is fairly variable, but appears to follow a stationary and possibly mean reverting pattern. DDG prices seem to range from 30% to 50% of corn prices. 
 
@@ -110,14 +112,85 @@ Iowa State University Extension maintains an excellent spreadsheet model of etha
 
 [Iowa State University Ethanol Plant Economic Model](https://www.extension.iastate.edu/agdm/articles/hof/HofJan08.html)
 
-# The Crush Spread
+# Price Relationships
 
-Similar to the soybean crush, cattle crush, and crack spread, there exists futures contracts for ethanol, corn, and natural gas. This means that much of the ethanol production margins can be hedged or speculated on as we saw in the spreads of previous chapters. The only limitation is that the ethanol futures contract does not attract high trading volumes, which increases trading costs.
+Similar to the soybean crush, cattle crush, and crack spread, there exists futures contracts for ethanol, corn. This means that much of the ethanol production margins can be hedged or speculated on as we saw in the spreads of previous chapters. There are some limitations to this crush spread. The ethanol futures contract does not attract high trading volumes, which increases trading costs through higher Bid-Ask spreads. Also, there is no ddg futures contract, which means to hedge this revanue stream you have to use a cross hedge with with corn futures.
 
-[Corn for Ethanol Crush Spread by CMEGroup](http://www.cmegroup.com/trading/agricultural/files/AC-406_DDG_CornCrush_042010.pdf)
+The ethanol producer's profit is roughly, 
+
+1. $P_{eth}*q_{eth} + P_{DDG}*q_{DDG} - P_{corn}*q_{corn}$
+
+A bushel of corn will yeild 2.8 gallons of ethanol and 17 lbs of ddgs, when processed into ethanol. Also, DDGs prices are quoted in $/tons, so we will need to convert that price to lbs (as we did for soybean meal). To calculate the Ethanol Crush, or the Gross Processing Margin (GPM), in terms of $/bushel of corn processed we need to to convert the prices of ethanol, and DDGs similarly to what we did for the soybean crush. 
+
+2. $P_{eth}*2.8 + P_{DDG}*17/2000 - P_{corn}$
+
+Equation 2 gives the GPM per bushel of corn processed into ethanol. Dividing $17/2000 = 0.0085$ yields 
+
+3. $P_{eth}*2.8 + P_{DDG}*0.0085 - P_{corn}$
+
+# Hedging the Ethanol Crush Spread
+
+Like soybean crushers, ethanol producers can use futures contracts to hedge their profitability. Ethanol producers buy corn and sell ethanol and DDGs, so the appropriate hedge trades would be to buy corn futures and sell (one month later) ethanol futures. An ethanol futures contract is for $29,000$ gallons of ethanol (the amount that will fill one typical train car).
+
+Then two corn futures contracts produces just about one ethanol futures contract worth of ethanol, since 
+
+$10,000$ bu corn $= 10,000*2.8$ gallons, or $28,000$ gallons of ethanol.  
+
+Therefore a 2-1 ratio of corn to ethanol contracts hedges the purchase of corn and the sale of ethanol, which will reduce the variability in GPM.
+
+In this case, however, the sale of DDGs would remain unhedged. Since one bushel of corn weighs about $56lbs$ and one bushel of corn yeilds $17lbs$ of DDGs, by weight, the producer gets back $17/56 = 0.30$ in DDGs and the price of DDGs tracks the price of corn closely as we observed above. Intuitively, by hedging the purchase of corn and not the sale of DDGs, the ethanol producer would effectively be overhedged on the purchase of corn. With no viable futures contract for DDGs, the producer cannot directly solve this problem. Instead they can use a **cross hedge**. 
+
+# Cross Hedging 
+
+When there is no futures contract for exact product or commodity that one needs to hedge, another futures contract whose price is highly correlated with the commodity you need to hedge can be used. In our case, we already observed above that the prices of DDGs and corn futures are highly correlated, so it may be beneficial to use corn futures to hedge the sale of DDGs. 
+
+# Minimize the Variance of Cash Flow with Optimal Hedge Ratio for DDGs and Corn Futures
+
+To develop the concept of a *cash flow variance minimizing* optimal hedge ratio, lets step back to the simpler example of a farmer hedging a crop of grain. We saw that the spot prices a farmer recieves is not exactly equal to the futures price for corn. Factors like transportation cost and local supply and demand conditions in the spot market make the basis, or the difference between spot and futures prices, variable. If this variability is too high, it may not be optimal to hedge with a 1-1 cash and futures position, even for the simple case of a farmer's short hedge. 
+
+The farmer's hedged cash flow
+
+$CashFlow(t) = S(t) - b[F(t) - F(0)]$  
+$CashFlow(t) = S(0) + S(t) - S(0) - b[F(t) - F(0)]$  
+$CashFlow(t) = S(0) + \Delta S(t) - b\Delta F(t)$  
+
+
+where $S(t)$ is the spot price at time $t$, $F(t)$ is the futures price at time $t$, and $b$ is the number of futures contracts used to hedge one 'contracts' worth of grain. Now examine the variance of this cash flow. 
+
+$Var[CashFlow(t)] = Var[S(0) + \Delta S(t) - b\Delta F(t)]$  
+$Var[CashFlow(t)] = Var[\Delta S(t) - b\Delta F(t)]$  
+$Var[CashFlow(t)] = Var[\Delta S(t)] + b^2Var[\Delta F(t)] - 2bCov[\Delta S(t),\Delta F(t)]$
+
+Now, naturally we want to minimize the variance of cash flow, so we can minimize this with respect to $b$ (take the derivative with respect to $b$), and find the optimal number of futures contracts to use to hedge. 
+
+First order condition: 
+
+$0 = 2bVar[\Delta F(t)] - 2Cov[\Delta S(t),\Delta F(t)]$  
+
+Solving for $b$, 
+
+$b = \frac{Cov[\Delta S(t),\Delta F(t)]}{Var[\Delta F(t)]}$
+
+This, you may recognise, happens to be the coefficient estimate if we were to use linear regression to regress changes in spot price on changes in futures prices. 
+
+$\Delta S(t) = \beta_0 + b\Delta F(t) + \epsilon(t)$
+
+This means we can use historical prices to estimate the relationship between spot and futures prices, which yields the optimal hedge ratio for hedging the spot price with futures. 
+
+# Using Corn Futures to Cross Hedge DDG Sales
+
+In a similar manner, we can determine the optimal hedge ratio for hedging DDG sales with corn futures by regressing changes in spot DDG prices on changes in corn futures prices. The excercises directs you to work through this example. 
+
+
+
 
 # Readings
 
+1. [Corn for Ethanol Crush Spread by CMEGroup](http://www.cmegroup.com/trading/agricultural/files/AC-406_DDG_CornCrush_042010.pdf)
 
+# Exercises 
+
+1. Compute the optimal hedge ratio for DDGs and corn futures.
+2. Hedge one month's production of ethanol for a plant that produces 100 millon gallons per year, with constant production throughout the year. Use December 2015 as the purchase date of corn and the sale date of DDGs, and March 2016 for the sale date of ethanol. 
 
 # Refrences
