--- a/12-A-South-American-Production.Rmd
+++ b/12-A-South-American-Production.Rmd
@@ -1,26 +1,268 @@
 # South American Production
 
-Introduction
+Over the last twenty years Brazil and Argentina have grown in prominance on the world stage and are currently among the most important growers of soybeans and corn, particularly so for soybeans. 
 
-- Show increasing rise in prominance of South american production and exports of corn and soybeans
+In figure 1 we have plotted the production since 1990 of the world's top five producers of corn. Argentina, Brazil, China, the European Union, and the United States round out this group. A clear pattern of increases over time is notable particularly for the U.S., China, and Brazil, generating a dramatic upward trend in the pruduction from this top group. 
 
-- Map of south america highlighting Brazil, Argentina, Paraguay, and Bolivia, as biggest players on world stage
-
-- Level and percent figures for corn and soybeans
-
-# South American Production Seasons
+Data for figures 1-4 come from the [USDA FAS World Production Supply and Demand](https://apps.fas.usda.gov/psdonline/app/index.html#/app/downloads) historical datasets for grains and oilseeds.
 
 
-## Brazil
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+library(tidyverse)
+grains   <- read.csv('Excel-files/WorldProduction-Grains.csv')
 
 
-Importance of double cropping
+start <- 1990
 
-## Argentina
+year <-  as.numeric(format(Sys.Date(), format="%Y"))
+  
+get_top_corn <- grains %>% 
+                  filter(Market_Year == year) %>%
+                  filter(Commodity_Description == "Corn") %>%
+                  filter(Attribute_ID == 28) %>%
+                  arrange(desc(Value))
 
-More similar to U.S. in lattitude, so single crop.
+get_top_corn <- get_top_corn[1:5, 'Country_Name']
 
-## Seasonal production and World trade flows
+top_corn <- grains %>%
+  filter(Commodity_Description == "Corn") %>%
+  filter(Attribute_ID == 28) %>%
+  filter(Country_Name %in% get_top_corn) %>%
+  filter(Market_Year %in% c(start:year))
 
+
+c <- ggplot(top_corn, aes(x = Market_Year, y = Value, fill = Country_Name)) + geom_area() + 
+      theme_bw() +
+      scale_x_continuous(breaks = seq(start, year, 2)) +
+      labs(fill = "Top 5 Countries") +
+      theme(axis.title.x = element_blank()) +   # Remove x-axis label
+      ylab("Production - 1000 MT") + 
+      scale_fill_brewer(palette = 'Accent')  +
+      ggtitle("Figure 1: Top World Producers of Corn")  
+      
+
+c
+
+```
+
+
+Figure 2 plots the top five countries by exports. Here we see China and the EU dropping out of the top five with Russia and Ukraine taking their place. While U.S. exports have been mostly flat over this time period, exports from Brazil have been expanding rapidly since about 2004. 
+
+
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+
+get_top_corn <- grains %>% 
+                  filter(Market_Year == year) %>%
+                  filter(Commodity_Description == "Corn") %>%
+                  filter(Attribute_ID == 88) %>%
+                  arrange(desc(Value))
+
+get_top_corn <- get_top_corn[1:5, 'Country_Name']
+
+top_corn <- grains %>%
+  filter(Commodity_Description == "Corn") %>%
+  filter(Attribute_ID == 88) %>%
+  filter(Country_Name %in% get_top_corn) %>%
+  filter(Market_Year %in% c(start:year))
+
+
+c2 <- ggplot(top_corn, aes(x = Market_Year, y = Value, fill = Country_Name)) + geom_area() + 
+      theme_bw() +
+      scale_x_continuous(breaks = seq(start, year, 2)) +
+      labs(fill = "Top 5 Countries") +
+      theme(axis.title.x = element_blank()) +   # Remove x-axis label
+      ylab("Exports - 1000 MT") + 
+      scale_fill_brewer(palette = 'Accent')  +
+      ggtitle("Figure 2: Top World Exporters of Corn")  
+      
+
+c2
+
+
+```
+
+
+Next, in table 1, we present the top producers of corn in 2017.
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+library(tidyverse)
+library(tibble)
+
+
+
+
+get_top_corn <- grains %>% 
+                  filter(Market_Year == year) %>%
+                  filter(Commodity_Description == "Corn") %>%
+                  filter(Attribute_ID == 28) %>%
+                  arrange(desc(Value))
+
+get_top_corn <- get_top_corn[1:10, 'Country_Name']
+
+grains$Production <- grains$Value
+
+grains %>%
+              filter(Commodity_Description == "Corn") %>%
+              filter(Attribute_ID == 28) %>%
+               filter(Country_Name %in% get_top_corn) %>%
+              filter(Market_Year == year) %>%
+              select(Country_Name, Production) %>%
+              arrange(desc(Production))
+
+ 
+```
+Table 1: Top 10 World Producers of Corn, 2017
+
+Now we turn our attention to the soybean market. In figure 3 we present production since 1990 from the top five countries. Here, the importance of Brazil and Argentina is much more obvious. While production in the U.S. has a visible upward trend, Brazil and Argentina are really increasing at a rapid rate. 
+
+
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+library(tidyverse)
+
+oilseeds <- read.csv('Excel-files/WorldProduction-Oilseeds.csv')
+
+
+
+get_top_soy <- oilseeds %>% 
+                  filter(Market_Year == 2017) %>%
+                  filter(Commodity_Code == 2222000) %>%
+                  filter(Attribute_ID == 28) %>%
+                  arrange(desc(Value))
+
+get_top_soy <- get_top_soy[1:5, 'Country_Name']
+
+top_soy<- oilseeds %>%
+  filter(Commodity_Code == 2222000) %>%
+  filter(Attribute_ID == 28) %>%
+  filter(Country_Name %in% get_top_soy) %>%
+  filter(Market_Year %in% c(start:year))
+
+
+s <- ggplot(top_soy, aes(x = Market_Year, y = Value, fill = Country_Name)) + geom_area() + 
+      theme_bw() +
+      scale_x_continuous(breaks = seq(start, year, 2))+
+      labs(fill = "Top 5 Countries") +
+      theme(axis.title.x = element_blank()) +   # Remove x-axis label
+      ylab("Production - 1000 MT") + 
+      scale_fill_brewer(palette = 'Accent')  +
+      ggtitle("Figure 3: Top World Producers of Soybeans")  
+
+s
+
+```
+
+
+In figure 4 we plot the exports from the top five countries. From figure 3 to 4 China and India drop out and are replaced by Canada and Paraguay. The growth in soybean exports from Brazil is quite remarkable in this chart.  
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+library(tidyverse)
+
+
+
+
+
+get_top_soy <- oilseeds %>% 
+                  filter(Market_Year == 2017) %>%
+                  filter(Commodity_Code == 2222000) %>%
+                  filter(Attribute_ID == 88) %>%
+                  arrange(desc(Value))
+
+get_top_soy <- get_top_soy[1:5, 'Country_Name']
+
+top_soy<- oilseeds %>%
+  filter(Commodity_Code == 2222000) %>%
+  filter(Attribute_ID == 88) %>%
+  filter(Country_Name %in% get_top_soy) %>%
+  filter(Market_Year %in% c(start:year))
+
+
+s2 <- ggplot(top_soy, aes(x = Market_Year, y = Value, fill = Country_Name)) + geom_area() + 
+      theme_bw() +
+      scale_x_continuous(breaks = seq(start, year, 2))+
+      labs(fill = "Top 5 Countries") +
+      theme(axis.title.x = element_blank()) +   # Remove x-axis label
+      ylab("Exports - 1000 MT") + 
+      scale_fill_brewer(palette = 'Accent')  +
+      ggtitle("Figure 4: Top World Exporters of Soybeans")  
+
+s2
+
+```
+
+
+Table 2 shows the top ten producers of soybeans in the World. Here we see that Paraguay and Boliva are present in the top ten as well. 
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+library(tidyverse)
+library(tibble)
+
+get_top_soy <- oilseeds %>% 
+                  filter(Market_Year == year) %>%
+                  filter(Commodity_Code == 2222000) %>%
+                  filter(Attribute_ID == 28) %>%
+                  arrange(desc(Value))
+
+get_top_soy <- get_top_soy[1:10, 'Country_Name']
+
+oilseeds$Production <- oilseeds$Value
+
+oilseeds %>%
+              filter(Commodity_Code == 2222000) %>%
+              filter(Attribute_ID == 28) %>%
+               filter(Country_Name %in% get_top_soy) %>%
+              filter(Market_Year == year) %>%
+              select(Country_Name, Production) %>%
+              arrange(desc(Production))
+
+
+
+```
+Table 2: Top 10 World Producers of Soybeans, 2017
+
+
+
+
+## South American Production Seasons and Trade Flows
+
+Since South America experiences summer when we in the North America experience winter and vice versa, North American and South American production is nicely complementary in providing corn and soybeans for the export market. We noted in Chapter 9 and 10 that U.S. corn and soybean exports are at their highest levels during the 2nd quarter of the marketing year - right after harvest. During this time, the planting and growing seasons are underway in South America, and the heavy export season from harvesting the previous crop is winding down. 
+
+Then, South American farmers are havesting during our planting and growing seasons (March through June). 
+
+The seasonality is a boon for importers because they have the opportunity to buy for seasonally low harvest-time prices twice per year rather than just once per year. 
+
+
+### Brazil
+
+Brazil, being quite close to the equator, enjoys the ability to double crop most every year. Typically, farmers plant soybeans as the first crop because if they plant soybeans first they get a second crop of corn. If they plant corn first, there is not enough time to get a second crop of soybeans. However, yields of first crop corn are higher then yields of second crop corn due to when the rainy season comes, so in some places farmers choose to plant one crop of corn and forego double cropping.  
+
+Figure 6 show production intensity of soybeans by state, and also provides a calendar of when planting and harvest activity of first crop soybeans are taking place. 
+
+![Figure 6: Regional Brazillian Soybean Production Seasons](images\brazil-soybeans-1.png)
+
+Figure 7 shows the same for second crop corn. 
+
+![Figure 7: Regional Brazillian 2nd Crop Corn Production Seasons](images\brazil-corn2-1.png)
+
+While figure 8 shows the regional production intensity of first crop corn. Notice the highest production of first crop corn is located in regions that have no second crop in figure 7. This shows that in the east, where managing a second crop is more difficult, farmers are more apt to plant a single crop of corn. 
+
+![Figure 8: Regional Brazillian 1st Crop Corn Production Seasons](images\brazil-corn1-1.png)
+
+
+
+### Argentina
+
+Argentina is more similar to the U.S. in lattitude, so they are only able to plant a single crop. Planting of corn begins in September and harvest runs from March until May. 
+
+![Figure 9: Regional Argentinian Corn Production Seasons](images\argentina-corn-1.png)
+
+
+
+Planting of soybeans begins in November and harvest runs from April to May. 
+
+
+![Figure 10: Regional Argentinian Soybean Production Seasons](images\argentina-soy-1.png)
 
 
