--- a/16-CrudeOiland.Rmd
+++ b/16-CrudeOiland.Rmd
@@ -150,7 +150,7 @@ Crack Spread_t &= Crack Spread_{t-1} + Crack Spread_{t-2}    \\
 \end{align}
 
 
-where $Crack Spread_t$ is defined as in equation 1, and the remaining variables are first differences of logged prices ($\Delta Crude_{t-1} = ln(Crude_t) - ln(Crude_{t-1})$). Recall from chapter 17 that in order for the statistical properties of the variables we are using to be appropriate for the linear regression we need all the variables to be stationary. That explains why we used the first differences of logged prices of the component prices in the crack spread, since futures prices are often found to be non-stationary and first differences of logged prices are usually stationary. 
+where $Crack Spread_t$ is defined as in equation 1, and the remaining variables are first differences of logged prices ($\Delta Crude_{t-1} = ln(Crude_{t-1}) - ln(Crude_{t-2})$). Recall from chapter 17 that in order for the statistical properties of the variables we are using to be appropriate for the linear regression we need all the variables to be stationary. That explains why we used the first differences of logged prices of the component prices in the crack spread, since futures prices are often found to be non-stationary and first differences of logged prices are usually stationary. 
 
 Additionally, the $Crack Spread_t$ variable is likely to be stationary, even thought it is a linear combination of prices that are not stationary. The reason for that is because the linear combination reflects the profit margin in a real business model. It simply cannot be that profits in such a competitive business as oil refining could wander higher without bound, as in a non-stationary random walk price model. 
 
